--- a/notebooks/EOAD_Block1.ipynb
+++ b/notebooks/EOAD_Block1.ipynb
@@ -4,6 +4,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div style=\"display: flex; align-items: center; justify-content: center; gap: 20px;\">\n",
+    "  <!-- Left Column: Image -->\n",
+    "  <div style=\"flex: 1; text-align: center;\">\n",
+    "    <img src=\"https://i0.wp.com/cdcs.web.ua.pt/wp-content/uploads/2022/05/cropped-cropped-Picture13-1.png?w=968\" width=\"370\" height=\"200\" style=\"display: block; margin: auto;\"/>\n",
+    "  </div>\n",
+    "\n",
+    "  <!-- Right Column: Text -->\n",
+    "  <div style=\"flex: 1; text-align: left;\">\n",
+    "    <div><strong style=\"color: #4F5B63; font-size: 1.5em;\">Master in Data Science for Social Sciences</strong></div>\n",
+    "    <div><strong style=\"color: #4F5B63; font-size: 1.2em;\">University of Aveiro</strong></div>\n",
+    "    <p style=\"color: #46627F; font-weight: bold; font-style: italic;\">Statistics and Optimization for Decision Support - 2025/2026</p>\n",
+    "    <p style=\"color: #4F5B63;\"></p>\n",
+    "    <p style=\"color: #4F5B63;\">Paulo Batista</p>\n",
+    "  </div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"display: flex; justify-content: space-around; align-items: flex-start;\">\n",
+    "  <div style=\"width: 100%; padding: 10px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); margin: 10px;\">\n",
+    "    <h2><h1 style=\"text-align: center; font-size: 4em; color: #46627F; margin-top: 0; margin-bottom: 0; line-height: 1;\">Block 1</h1>\n",
+    "<h1 style=\"text-align: center; color: #B1C0CF; margin-top: 0; margin-bottom: 0; line-height: 1;\"> - Inferential Statistics - Part 1 - </h1></h2>\n",
+    "      </div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# EOAD 20242025 - Block I\n",
     "\n",
     "Mestrado em Ciência dos Dados para Ciências Sociais <br>\n",
