--- a/notebooks/EOAD_Block1_A.ipynb
+++ b/notebooks/EOAD_Block1_A.ipynb
@@ -162,17 +162,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "import sys\n",
+    "\n",
     "from pathlib import Path\n",
     "\n",
     "import pandas as pd\n",
-    "\n",
     "import numpy as np\n",
-    "\n",
-    "import csv\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.patches import Rectangle\n",
@@ -188,10 +188,7 @@
     "\n",
     "from sklearn.datasets import load_iris\n",
     "\n",
-    "import os\n",
     "\n",
-    "\n",
-    "import sys\n",
     "\n"
    ]
   },
@@ -205,18 +202,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "WindowsPath('c:/Users/paulo/OneDrive/ONEDRIVE_CLOUD_DISK/TRABALHO_AULAS/AL20242025/1SEM/EOAD/EOAD Block 1/EOAD_Block1_PracticeRepository/notebooks')"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Working directory set to: c:\\Users\\paulo\\OneDrive\\TRABALHO_AULAS\\AL20252026\\1S_MstCDCS_EOAD\\Block1\\EOAD_Block1_PracticeRepository\n"
+     ]
     }
    ],
    "source": [
@@ -273,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -351,8 +345,6 @@
        "      <th>G2_por</th>\n",
        "      <th>G3_por</th>\n",
        "      <th>travel_time_cont</th>\n",
-       "      <th>studytime_mat_cont</th>\n",
-       "      <th>studytime_por_cont</th>\n",
        "      <th>FinalResult_por</th>\n",
        "      <th>FinalResult_mat</th>\n",
        "      <th>FinalResult_overall</th>\n",
@@ -395,20 +387,18 @@
        "      <td>6</td>\n",
        "      <td>6</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>yes</td>\n",
        "      <td>no</td>\n",
        "      <td>no</td>\n",
        "      <td>no</td>\n",
-       "      <td>6</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>6</td>\n",
-       "      <td>16.386096</td>\n",
-       "      <td>3.367203</td>\n",
-       "      <td>3.953938</td>\n",
-       "      <td>Fail</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>21.491229</td>\n",
+       "      <td>Pass</td>\n",
        "      <td>Fail</td>\n",
        "      <td>Fail</td>\n",
        "    </tr>\n",
@@ -448,20 +438,18 @@
        "      <td>5</td>\n",
        "      <td>6</td>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>no</td>\n",
        "      <td>yes</td>\n",
        "      <td>no</td>\n",
        "      <td>no</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
-       "      <td>5</td>\n",
-       "      <td>6</td>\n",
-       "      <td>7.115418</td>\n",
-       "      <td>3.814464</td>\n",
-       "      <td>3.391257</td>\n",
-       "      <td>Fail</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>3.484904</td>\n",
+       "      <td>Pass</td>\n",
        "      <td>Fail</td>\n",
        "      <td>Fail</td>\n",
        "    </tr>\n",
@@ -501,19 +489,17 @@
        "      <td>8</td>\n",
        "      <td>10</td>\n",
        "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>yes</td>\n",
        "      <td>no</td>\n",
-       "      <td>yes</td>\n",
        "      <td>no</td>\n",
-       "      <td>10</td>\n",
-       "      <td>7</td>\n",
-       "      <td>8</td>\n",
-       "      <td>10</td>\n",
-       "      <td>0.324700</td>\n",
-       "      <td>3.553303</td>\n",
-       "      <td>3.151633</td>\n",
+       "      <td>no</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>5.711113</td>\n",
        "      <td>Pass</td>\n",
        "      <td>Pass</td>\n",
        "      <td>Pass</td>\n",
@@ -544,27 +530,22 @@
        "2         3      2     2     3       3            10       7       8      10   \n",
        "\n",
        "   student_id  studytime_por  failures_por schoolsup_por famsup_por paid_por  \\\n",
-       "0           1              2             0           yes         no       no   \n",
-       "1           2              2             0            no        yes       no   \n",
-       "2           3              2             3           yes         no      yes   \n",
+       "0           1            2.0           0.0           yes         no       no   \n",
+       "1           2            2.0           0.0            no        yes       no   \n",
+       "2           3            2.0           0.0           yes         no       no   \n",
        "\n",
        "  activities_por  absences_por  G1_por  G2_por  G3_por  travel_time_cont  \\\n",
-       "0             no             6       5       6       6         16.386096   \n",
-       "1             no             4       5       5       6          7.115418   \n",
-       "2             no            10       7       8      10          0.324700   \n",
+       "0             no           4.0     0.0    11.0    11.0         21.491229   \n",
+       "1             no           2.0     9.0    11.0    11.0          3.484904   \n",
+       "2             no           6.0    12.0    13.0    12.0          5.711113   \n",
        "\n",
-       "   studytime_mat_cont  studytime_por_cont FinalResult_por FinalResult_mat  \\\n",
-       "0            3.367203            3.953938            Fail            Fail   \n",
-       "1            3.814464            3.391257            Fail            Fail   \n",
-       "2            3.553303            3.151633            Pass            Pass   \n",
-       "\n",
-       "  FinalResult_overall  \n",
-       "0                Fail  \n",
-       "1                Fail  \n",
-       "2                Pass  "
+       "  FinalResult_por FinalResult_mat FinalResult_overall  \n",
+       "0            Pass            Fail                Fail  \n",
+       "1            Pass            Fail                Fail  \n",
+       "2            Pass            Pass                Pass  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,16 +556,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(395, 50)"
+       "(395, 48)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +585,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 395 entries, 0 to 394\n",
-      "Data columns (total 50 columns):\n",
+      "Data columns (total 48 columns):\n",
       " #   Column               Non-Null Count  Dtype  \n",
       "---  ------               --------------  -----  \n",
       " 0   school               395 non-null    object \n",
@@ -641,24 +622,22 @@
       " 31  G2_mat               395 non-null    int64  \n",
       " 32  G3_mat               395 non-null    int64  \n",
       " 33  student_id           395 non-null    int64  \n",
-      " 34  studytime_por        395 non-null    int64  \n",
-      " 35  failures_por         395 non-null    int64  \n",
-      " 36  schoolsup_por        395 non-null    object \n",
-      " 37  famsup_por           395 non-null    object \n",
-      " 38  paid_por             395 non-null    object \n",
-      " 39  activities_por       395 non-null    object \n",
-      " 40  absences_por         395 non-null    int64  \n",
-      " 41  G1_por               395 non-null    int64  \n",
-      " 42  G2_por               395 non-null    int64  \n",
-      " 43  G3_por               395 non-null    int64  \n",
+      " 34  studytime_por        370 non-null    float64\n",
+      " 35  failures_por         370 non-null    float64\n",
+      " 36  schoolsup_por        370 non-null    object \n",
+      " 37  famsup_por           370 non-null    object \n",
+      " 38  paid_por             370 non-null    object \n",
+      " 39  activities_por       370 non-null    object \n",
+      " 40  absences_por         370 non-null    float64\n",
+      " 41  G1_por               370 non-null    float64\n",
+      " 42  G2_por               370 non-null    float64\n",
+      " 43  G3_por               370 non-null    float64\n",
       " 44  travel_time_cont     395 non-null    float64\n",
-      " 45  studytime_mat_cont   395 non-null    float64\n",
-      " 46  studytime_por_cont   395 non-null    float64\n",
-      " 47  FinalResult_por      395 non-null    object \n",
-      " 48  FinalResult_mat      395 non-null    object \n",
-      " 49  FinalResult_overall  395 non-null    object \n",
-      "dtypes: float64(3), int64(23), object(24)\n",
-      "memory usage: 154.4+ KB\n"
+      " 45  FinalResult_por      395 non-null    object \n",
+      " 46  FinalResult_mat      395 non-null    object \n",
+      " 47  FinalResult_overall  395 non-null    object \n",
+      "dtypes: float64(7), int64(17), object(24)\n",
+      "memory usage: 148.3+ KB\n"
      ]
     }
    ],
@@ -675,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +752,7 @@
        "4     0.0  setosa  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -908,7 +887,7 @@
        "1  P.M. Frame inclined at various angles  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
